--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="#" class="navbar-brand">Edgar Osorio</a>
+               <a href="#" class="navbar-brand">Habil</a>
           </div>
 
           <div class="collapse navbar-collapse">
@@ -55,7 +55,7 @@ http://www.templatemo.com/tm-498-stimulus
                     <li><a href="#about" class="smoothScroll">Acerca de mi</a></li>
                     <li><a href="#experience" class="smoothScroll">Experiencias</a></li>
                     <li><a href="#quotes" class="smoothScroll">Testimoniales</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contacto</a></li>
+                    <li><a href="#contact" class="smoothScroll">Contactame</a></li>
                </ul>
           </div>
 
@@ -76,8 +76,8 @@ http://www.templatemo.com/tm-498-stimulus
                <div class="col-md-6 col-sm-6">
                     <div class="home-thumb">
                          <div class="section-title">
-                              <h4 class="wow fadeInUp" data-wow-delay="0.3s">Bienvenido a mi sitio web</h4>
-                              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Stimulus</strong> currently based in New York city.</h1>
+                              <h4 class="wow fadeInUp" data-wow-delay="0.3s">Bienvenido a habil rey</h4>
+                              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Habil</strong> currently based in New York city.</h1>
                               <p class="wow fadeInUp" data-wow-delay="0.9s">Donec auctor arcu at efficitur lacinia. Praesent bibendum efficitur ipsum, et mattis tellus interdum in. Ut a dictum purus. Vestibulum non pellentesque felis, sed dignissim urna. Vestibulum id accumsan quam.</p>
                               
                               <a href="#about" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Conoceme</a>
